# packaging

./: .dockerignore  .gitmodules  Dockerfile  Dockerfile.package-bionic  Dockerfile.package-focal  Dockerfile.package-jammy  Dockerfile.package-noble  Dockerfile.package-xenial  Jenkinsfile  README.md
test/: Dockerfile.test-bionic  Dockerfile.test-xenial
test/cthyb/: CMakeLists.txt
test/dft_tools/: LaVO3-Pnma.inp  SrVO3.ctqmcout  SrVO3.oubwin  SrVO3.outputs  SrVO3.parproj  SrVO3.pmat  SrVO3.struct  SrVO3.sympar  SrVO3.symqmc  analyse_block_structure_from_gf.py  analyse_block_structure_from_gf2.py  blockstructure.py  hk_convert.py  hk_convert_hamiltonian.hk  plovasp  sigma_from_file.py  srvo3_Gloc.py  srvo3_transp.py  sumkdft_basic.py  w90_convert.py  wien2k_convert.py
test/solid_dmft/: CMakeLists.txt  python
test/triqs/: CMakeLists.txt  FindTest.cmake  c++  gtest  python
test/triqs_Nevanlinna/: CMakeLists.txt  c++  python
test/triqs_cthyb/: CMakeLists.txt  c++  python
test/triqs_ctseg/: CMakeLists.txt  c++  python
test/triqs_dft_tools/: CMakeLists.txt  c++  python  test
test/triqs_hartree_fock/: CMakeLists.txt  python
test/triqs_hubbardI/: CMakeLists.txt  python
test/triqs_maxent/: CMakeLists.txt  python
test/triqs_solid_dmft/: CMakeLists.txt  python
test/triqs_tprf/: CMakeLists.txt  c++  python
